welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:11: error: expected start of definition
override run() {
         ^