welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
def faireV() { point()
               avance(); gauche(); avance();
               point(); recule(); droite(); avance; point()
  
}


def point()       {baisseBrosse(); leveBrosse()}


override run() {
  avance();avance();avance()
  faireV(); avance(); avance(); gauche()
}